--- a/index.html
+++ b/index.html
@@ -39,21 +39,151 @@
                 <button class="btn2">Learn More</button>
             </div>
         </div>
+
+        <section id="card">
+
+            <div class="card card2">
+                <em>Midsized SUV</em>
+                <h2>Model Y</h2>
+                <div class="card-buttons">
+                    <button class="btn1">Order Now</button>
+                    <button class="btn2">Learn More</button>
+                </div>
+            </div>
+
+            <div class="card card1">
+                <em>Sport Sedan</em>
+                <h2>Model 3</h2>
+                <div class="card-buttons">
+                    <button class="btn1">Order Now</button>
+                    <button class="btn2">Learn More</button>
+                </div>
+            </div>
+
+            <div class="card card3">
+                <em>Utility Truck</em>
+                <h2>Cybertruck</h2>
+                <p>2.99% APR Available</p>
+                <div class="card-buttons">
+                    <button class="btn1">Order Now</button>
+                    <button class="btn2">Learn More</button>
+                </div>
+            </div>
+            <!-- <div class="card card4">
+                <p>Luxury SUV</p>
+                <h2>Model X</h2>
+                <div class="card-buttons">
+                    <button class="btn1">Order Now</button>
+                    <button class="btn2">Learn More</button>
+                </div>
+            </div>
+
+            <div class="card card5">
+                <p>Luxury Sedan</p>
+                <h2>Model S</h2>
+                <div class="card-buttons">
+                    <button class="btn1">Order Now</button>
+                    <button class="btn2">Learn More</button>
+                </div> -->
+        </section>
     </main>
+
+    <div class="offers">
+
+        <div class="offer-card">
+            <div class="offer-text">
+                <h2>Current Offers</h2>
+                <p>Explore limited-time offers on Tesla vehicles.</p>
+                <button>Learn More</button>
+            </div>
+            <div class="offer-image">
+                <img src="resources/offers.jpg" alt="Current Offers">
+            </div>
+        </div>
+
+        <div class="offer-card">
+            <div class="offer-text">
+                <h2>American Heroes</h2>
+                <p>$500 off for military, first responders, healthcare, teachers and students.</p>
+                <button>Learn More</button>
+            </div>
+            <div class="offer-image">
+                <img src="resources/offers2.jpg" alt="American Heroes">
+            </div>
+        </div>
+    </div>
+
+    <section class="feature-section">
+        <div class="feature-card large-card">
+            <img src="resources/supervised.jpg" alt="">
+            <div class="feature-content">
+                <h2>Full Self-Driving (Supervised) Keeps You Safer</h2>
+                <div class="feature-buttons">
+                    <button class="btn1-feat">Demo Drive</button>
+                    <button class="btn2-feat">View Safety Report</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="feature-card small-card">
+            <img src="resources/hood.jpg" alt="">
+            <div class="feature-content">
+                <h2>Features That Come Standard</h2>
+                <div class="feature-buttons">
+                    <button class="btn3">Discover</button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    
+    <section class="energy">
+        <div class="energy-card panels">
+            <div class="energy-content">
+                <h2>Solar Panels</h2>
+                <p>Power Your Home and Reduce Your Electricity Bill</p>
+                <div class="energy-buttons">
+                    <button class="btn1">Order Now</button>
+                    <button class="btn2">Learn More</button>
+                </div>
+            </div>
+        </div>
+        <div class="energy-card powerwall">
+            <div class="energy-content">
+                <h2>Powerwall</h2>
+                <p>Keep Your Lights On During Outages</p>
+                <div class="energy-buttons">
+                    <button class="btn1">Order Now</button>
+                    <button class="btn2">Learn More</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="energy-card roof">
+            <div class="energy-content">
+                <h2>Solar Roof</h2>
+                <p>Generate Clean Energy With Your Roof.</p>
+                <div class="energy-buttons">
+                    <button class="btn1">Order Now</button>
+                    <button class="btn2">Learn More</button>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <footer>
         <div class="footer-content">
-            <p>© 2024 Tesla, Inc. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="#">Privacy & Legal</a>
-                <a href="#">Contact</a>
-                <a href="#">Careers</a>
-                <a href="#">News</a>
-                <a href="#">Engage</a>
-                <a href="#">Locations</a>
-            </div>
+            <p>Tesla © 2026</p>
+            <a href="#">Privacy & Legal</a>
+            <a href="#">Vehicle Recalls</a>
+            <a href="#">Contact</a>
+            <a href="#">News</a>
+            <a href="#">Get Updates</a>
+            <a href="#">Locations</a>
+            <a href="#">Learn</a>
     </footer>
-    
+
     <button class="chat-fab-btn">
         <img src="resources/chat.svg" alt="Chat Icon">
     </button>
