modified:   index.css 	modified:   index.html 	deleted:    resources/card-cybertruck.jpg

--- a/index.html
+++ b/index.html
@@ -61,9 +61,19 @@
             </div>
 
             <div class="card card3">
-                <em>Utility Truck</em>
-                <h2>Cybertruck</h2>
-                <p>2.99% APR Available</p>
+                <em>Luxury Sedan</em>
+                <h2>Model S</h2>
+                <p>3.99% APR Available</p>
+                <div class="card-buttons">
+                    <button class="btn1">Order Now</button>
+                    <button class="btn2">Learn More</button>
+                </div>
+            </div>
+
+            <div class="card card4">
+                <em>Luxury SUV</em>
+                <h2>Model X</h2>
+                <p>3.99% APR Available</p>
                 <div class="card-buttons">
                     <button class="btn1">Order Now</button>
                     <button class="btn2">Learn More</button>
