modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <h1>Model 3</h1>
             <p>2.99% APR Available</p>
             <div class="banner-buttons">
-                <button class="btn1">Order Now</button>
-                <button class="btn2">Learn More</button>
+                <a href="#"><button class="btn1">Order Now</button></a>
+                <a href="#"><button class="btn2">Learn More</button></a>
             </div>
         </div>
 
@@ -46,8 +46,8 @@
                 <em>Midsized SUV</em>
                 <h2>Model Y</h2>
                 <div class="card-buttons">
-                    <button class="btn1">Order Now</button>
-                    <button class="btn2">Learn More</button>
+                    <a href="#"><button class="btn1">Order Now</button></a>
+                    <a href="#"><button class="btn2">Learn More</button></a>
                 </div>
             </div>
 
@@ -55,8 +55,8 @@
                 <em>Sport Sedan</em>
                 <h2>Model 3</h2>
                 <div class="card-buttons">
-                    <button class="btn1">Order Now</button>
-                    <button class="btn2">Learn More</button>
+                    <a href="#"><button class="btn1">Order Now</button></a>
+                    <a href="#"><button class="btn2">Learn More</button></a>
                 </div>
             </div>
 
@@ -65,8 +65,8 @@
                 <h2>Model S</h2>
                 <p>3.99% APR Available</p>
                 <div class="card-buttons">
-                    <button class="btn1">Order Now</button>
-                    <button class="btn2">Learn More</button>
+                    <a href="#"><button class="btn1">Order Now</button></a>
+                    <a href="#"><button class="btn2">Learn More</button></a>
                 </div>
             </div>
 
@@ -75,8 +75,8 @@
                 <h2>Model X</h2>
                 <p>3.99% APR Available</p>
                 <div class="card-buttons">
-                    <button class="btn1">Order Now</button>
-                    <button class="btn2">Learn More</button>
+                    <a href="#"><button class="btn1">Order Now</button></a>
+                    <a href="#"><button class="btn2">Learn More</button></a>
                 </div>
             </div>
             <!-- <div class="card card4">
@@ -115,7 +115,7 @@
             <div class="offer-text">
                 <h2>American Heroes</h2>
                 <p>$500 off for military, first responders, healthcare, teachers and students.</p>
-                <button>Learn More</button>
+                <a href="#"><button>Learn More</button></a>
             </div>
             <div class="offer-image">
                 <img src="resources/offers2.jpg" alt="American Heroes">
@@ -129,8 +129,8 @@
             <div class="feature-content">
                 <h2>Full Self-Driving (Supervised) Keeps You Safer</h2>
                 <div class="feature-buttons">
-                    <button class="btn1-feat">Demo Drive</button>
-                    <button class="btn2-feat">View Safety Report</button>
+                    <a href="#"><button class="btn1-feat">Demo Drive</button></a>
+                    <a href="#"><button class="btn2-feat">View Safety Report</button></a>
                 </div>
             </div>
         </div>
@@ -140,7 +140,7 @@
             <div class="feature-content">
                 <h2>Features That Come Standard</h2>
                 <div class="feature-buttons">
-                    <button class="btn3">Discover</button>
+                    <a href="#"><button class="btn3">Discover</button></a>
                 </div>
             </div>
         </div>
@@ -153,8 +153,8 @@
                 <h2>Solar Panels</h2>
                 <p>Power Your Home and Reduce Your Electricity Bill</p>
                 <div class="energy-buttons">
-                    <button class="btn1">Order Now</button>
-                    <button class="btn2">Learn More</button>
+                    <a href="#"><button class="btn1">Order Now</button></a>
+                    <a href="#"><button class="btn2">Learn More</button></a>
                 </div>
             </div>
         </div>
@@ -163,8 +163,8 @@
                 <h2>Powerwall</h2>
                 <p>Keep Your Lights On During Outages</p>
                 <div class="energy-buttons">
-                    <button class="btn1">Order Now</button>
-                    <button class="btn2">Learn More</button>
+                    <a href="#"><button class="btn1">Order Now</button></a>
+                    <a href="#"><button class="btn2">Learn More</button></a>
                 </div>
             </div>
         </div>
@@ -174,8 +174,8 @@
                 <h2>Solar Roof</h2>
                 <p>Generate Clean Energy With Your Roof.</p>
                 <div class="energy-buttons">
-                    <button class="btn1">Order Now</button>
-                    <button class="btn2">Learn More</button>
+                    <a href="#"><button class="btn1">Order Now</button></a>
+                    <a href="#"><button class="btn2">Learn More</button></a>
                 </div>
             </div>
         </div>
