modified:   index.css 	modified:   index.html 	new file:   resources/map.png 	new file:   resources/plug.svg 	new file:   resources/power.svg

--- a/index.html
+++ b/index.html
@@ -146,7 +146,28 @@
         </div>
 
     </section>
-    
+
+    <img class="map" src="resources/map.png" alt="Charger Image">
+
+    <section class="chargers">
+        <div class="network">
+            <h1>Find Your Charge</h1>
+            <p>View the network of Tesla Superchargers and Destination Chargers available near you</p>
+            <button class="btn-charger">View Network</button>
+            <button class="btn-locator">Learn More</button>
+        </div>
+        <div class="superchargers">
+            <h2>34,722</h2>
+            <img src="resources/power.svg" alt="Power Icon">
+            <p>Superchargers</p>
+
+        </div>
+        <div class="destination-chargers">
+            <h2>3,068</h2>
+            <img src="resources/plug.svg" alt="Destination Icon">
+            <p>Destination Chargers</p>
+        </div>
+    </section>
     <section class="energy">
         <div class="energy-card panels">
             <div class="energy-content">
